--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <div class="w3-white w3-text-grey w3-card-4">
 <div class="w3-display-container">
-<img src="97cbd636-356d-4771-929d-173cf30dc055.jpg" style="width:100%" alt="Avatar">
+<img src="https://github.com/cicilialaurenc/cicilialaurenc.github.io/blob/main/97cbd636-356d-4771-929d-173cf30dc055.jpg?raw=true" style="width:100%" alt="Avatar">
 <div class="w3-display-bottomleft w3-container w3-text-black">
 <h2>Cicilia L</h2>
 </div>
